# GameOfLifePlusPlus

./: .gitignore  CMakeLists.txt  README.md
TODO/: TODO MANO  TODO THOMAS  TODO WARD
WORKSHOP/: run.sh
WORKSHOP/TFA++/: CMakeLists.txt  DFA.cpp  DFA.h  Makefile  main.cpp  output1.dot  output2.dot
input/: DFA++_example.json  GameOfLife.ini  GameOfLifePDA.ini  alive.json  death.json  enfa.json  input_example.ini  pda.json  pda_alive.json  pda_dead.json  tm.json
input/GameOfLife/: GameOfLife.ini
input/mano_test_inis/: ini_info.txt  test0.ini  test1.ini  test2.ini  test3.ini
input/mano_test_other_files/: laws3.law  layout0.csv  layout2.csv  layout3.csv
input/official_examples/: input_example.ini  laws_example.law  manual_input_example.ini
input/other_tests/: GameOfLifePDA.ini
input/thomas_test/: new.json  test.csv  test.ini
input/thomas_test2/: off.json
input/thomas_tests/: off.json  test.ini
input/ward_tests/: auto.ini  laws.law  laws1.law  new.json  test.ini
input_files/: run_examples.sh
input_files/GameOfLife/: GameOfLife.ini
input_files/mano_test_inis/: test0.ini  test1.ini  test2.ini  test3.ini  test4.ini  test5.ini  test6.ini
official_examples/: automatic_input_example.ini  laws_example.law  manual_input_example.ini
output/: test.dot
portfolio/: TA TO voortgangsrapport 1819(1)(1)(1).docx  conferentie.pptx  contract.xlsx  voortgangsrapport_week_10.docx  voortgangsrapport_week_11.docx  voortgangsrapport_week_12.docx  voortgangsrapport_week_13.docx  voortgangsrapport_week_9.docx  workshop.pptx
src/: main.cpp
src/automata/: automaton.h  (+20 more)
(+93 files in other folders)
